--- a/grails-app/assets/stylesheets/ala-map-leaflet-deps.css
+++ b/grails-app/assets/stylesheets/ala-map-leaflet-deps.css
@@ -1,5 +1,5 @@
 /*
- *= require webjars/leaflet-draw/0.4.14/dist/leaflet.draw-src.css
+ *= require webjars/github-com-Leaflet-Leaflet-draw/0.4.12/leaflet.draw-src.css
  *= require webjars/Leaflet.Coordinates/0.1.5/dist/Leaflet.Coordinates-0.1.5.css
  *= require webjars/Leaflet.Coordinates/0.1.5/dist/Leaflet.Coordinates-0.1.5.ie.css
  *= require webjars/leaflet-easybutton/1.2.0/src/easy-button.css
