Downgraded leaflet to 1.6 for #29

--- a/grails-app/assets/stylesheets/ala-map-leaflet-deps.css
+++ b/grails-app/assets/stylesheets/ala-map-leaflet-deps.css
@@ -1,5 +1,5 @@
 /*
- *= require webjars/leaflet-draw/1.0.2/dist/leaflet.draw-src.css
+ *= require webjars/github-com-kbartas-Leaflet-draw/1.0.4/leaflet.draw-src.css
  *= require webjars/Leaflet.Coordinates/0.1.5/dist/Leaflet.Coordinates-0.1.5.css
  *= require webjars/Leaflet.Coordinates/0.1.5/dist/Leaflet.Coordinates-0.1.5.ie.css
  *= require webjars/leaflet-easybutton/2.4.0/src/easy-button.css
